# mesh-discord-relay

./: .gitignore  Cargo.toml  README.md  example_config.toml
src/: args.rs  config.rs  database.rs  discord.rs  logging.rs  main.rs  mqtt.rs
